# engenharia-de-dados

./: .gitignore  README.md  requirements.txt
30.Airflow/: pyproject.toml  requirements.txt
30.Airflow/dags/: dag_debug_variables.py  dag_ola_mundo_backfill.py  dag_ola_mundo_com_falha.py  dag_ola_mundo_time_delta.py  exemplo_ingestao_dados.py  exemplo_ingestao_dados2.py
30.Airflow/dags/aula_airflow/: utils.py
Airflow/: .env  .gitignore  README.md
Airflow/dags/: dag_jinja.py  dag_ola_mundo.py  dag_ola_mundo_com_falha_retry.py  dag_ola_mundo_start_e_end.py  exemplo_ingestao_dados3.py  exemplo_muitosimples.py
Airflow/dags/aula_airflow/: utils3.py
Airflow/docker/: Dockerfile  docker-compose.yml
aws_utils/: athena.py  criar_buckets.py  s3.py  s3_test.py
scripts/: etl_pipeline.py  limpeza_dados.py
tests/: test_env.py
